# Phase-Based-Video-Magnification

./: .gitignore  Dockerfile  README.md  build_docker_images.ps1  docker-compose.yml  pyproject.toml  requirements.txt
data/: timetest.txt
src/: evm_phase.py  evm_phase_legacy.py  pyr2arr.py  temporal_filters.py
src/perceptual/: filterbank.py
